# elfen

./: .readthedocs.yaml  CITATION.cff  README.md  README_MH.md  README_PYPI.md  benchmark.ipynb  bla.ipynb  changelog.md  download_nrc.md  feature_description.csv  feature_description.tsv  features.md  multilingual_support.csv  multilingual_support.md  psycholinguistic_norms.csv  pyproject.toml  requirements.txt  roadmap.md  showcase.ipynb  test.ipynb  tutorial.ipynb
binder/: postBuild
docs/: conf.py  custom_configuration.rst  elfen.rst  feature_overview.rst  index.rst  installation.rst  multilingual_support.rst  quickstart.rst  requirements.txt  tutorials.rst
docs/_build/doctrees/: custom_configuration.doctree  elfen.doctree  environment.pickle  (+5 more)
elfen/: dependency.py  emotion.py  extractor.py  features.py  generic.py  lexical_richness.py  preprocess.py  psycholinguistic.py  resources.py  semantic.py  surface.py  util.py
elfen.egg-info/: PKG-INFO
elfen/configs/: extractor_config.py
elfen/resource_utils/: resource_map.py
flfe/: config.py  emotion.py  entities.py  extractor.py  features.py  information.py  lexical_richness.py  morphological.py  pos.py  preprocess.py  psycholinguistic.py  readability.py  resources.py  surface.py
src/: config.py  emotion.py  entities.py  extractor.py  features.py  information.py  lexical_richness.py  pos.py  preprocess.py  psycholinguistic.py  ratios.py  readability.py  resources.py  schemas.py  semantic.py  surface.py  syntax.py  util.py
tests/: tests_extractor.py  tests_util.py
tests/resources/: test_download.py
(+23 files in other folders)
